--- a/css/modules/styles.css
+++ b/css/modules/styles.css
@@ -1198,7 +1198,7 @@ div.ui-memblist-usr .userVideos {
 }
 
 #virtualclassCont.congrea #virtualclassOptionsCont,
-.congtooltip {
+#virtualclassCont.congrea .congtooltip {
   text-decoration: none;
   outline-width: 0;
   z-index: 1103;
