--- a/css/modules/video.css
+++ b/css/modules/video.css
@@ -76,19 +76,32 @@
 
 #virtualclassCont.congrea #startLiveStream {
   position: absolute;
-  top: 0;
-  height: 44px;
-  background: #da2a0d;
-  color: #ffffff;
+  top: 8px;
+  color: #fff;
+  border: 1px solid #000;
   z-index: 100;
-  right: 0;
+  right: 10px;
   width: auto;
-  padding: 5px;
-  padding-top: 15px;
+  padding: 4px 8px 3px 9px;
   font-size: 0.9rem;
-  border-bottom-left-radius: 3px;
-  border-top-left-radius: 3px;
   cursor: pointer;
+  letter-spacing: 1.5px;
+  border-radius: 6px;
+}
+
+#virtualclassCont.congrea #startLiveStream .liveStream-icon {
+  display: inline-block;
+  margin-right: 10px;
+}
+
+#virtualclassCont.congrea #startLiveStream p {
+  margin: 0;
+  display: inline-block;
+  bottom: 3px;
+  position: relative;
+  font-size: 14px;
+  font-weight: 400;
+  padding: 0;
 }
 
 #virtualclassCont.congrea #messageLayoutVideo {
@@ -100,4 +113,3 @@
   opacity: 0.8;
   cursor: default;
 }
-
