Handle live-stream button on page refresh

--- a/templates/videoupload/videoupload.hbs
+++ b/templates/videoupload/videoupload.hbs
@@ -1,6 +1,6 @@
 <div id="virtualclassVideo" class="bootstrap virtualclass" style="display: block;" data-currapp="normalVideo">
   {{#if control}}
-    <div id="startLiveStream" data-sharinglivestream="0" >
+    <div id="startLiveStream" data-sharinglivestream="0" class="disabled">
       <span class=" liveStream-icon "></span>
       <p class="label">Live Stream </p>
     </div>
