Handle live stream language

--- a/templates/videoupload/videoupload.hbs
+++ b/templates/videoupload/videoupload.hbs
@@ -2,7 +2,7 @@
   {{#if control}}
     <div id="startLiveStream" data-sharinglivestream="0" class="disabled">
       <span class=" liveStream-icon "></span>
-      <p class="label">Live Stream </p>
+      <p class="label">{{getString 'livestream'}} </p>
     </div>
     {{else}}
     <p id="messageLayoutVideo">{{getString 'Vwllbshrshortly'}}</p>
