--- a/css/modules/styles.css
+++ b/css/modules/styles.css
@@ -4717,10 +4717,13 @@ html.pwaSupported #virtualclassCont.congrea[device="mobile"] .mobileLandscapeWar
 }
 
 html.pwaRunning #virtualclassCont.congrea #fullScreenButton,
-html.pwaRunning #virtualclassCont.congrea #fullScreenExitButton {
+html.pwaRunning #virtualclassCont.congrea #fullScreenExitButton,
+html.twaRunning #virtualclassCont.congrea #fullScreenButton,
+html.twaRunning #virtualclassCont.congrea #fullScreenExitButton {
   display: none !important;
 }
 
-html.pwaRunning #virtualclassCont.congrea #bookmark {
+html.pwaRunning #virtualclassCont.congrea #bookmark,
+html.twaRunning #virtualclassCont.congrea #bookmark {
   right: 0;
 }
