--- a/css/modules/video.css
+++ b/css/modules/video.css
@@ -113,3 +113,11 @@
   opacity: 0.8;
   cursor: default;
 }
+
+#virtualclassCont.congrea #ogvVideoContainer, #virtualclassCont.congrea #ogvVideoContainer > ogvjs{
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  width: 100%;
+  height: 100%;
+}
