Improve code and quality on Media module

--- a/templates/teacherVideo.hbs
+++ b/templates/teacherVideo.hbs
@@ -1,4 +1,4 @@
-<div id="videoHostContainer">
+<div id="videoHostContainer" class="hide">
   {{#if hasControl}}
     <video id="videoHostSource" class="" autoplay="" muted="muted"></video>
     <canvas id="videoHost"></canvas>
