--- a/templates/audioWidget.hbs
+++ b/templates/audioWidget.hbs
@@ -15,7 +15,7 @@
 
       <li class="videoSwitchCont congtooltip" data-title="{{getString 'videooff'}}" id="congCtrBar">
         <a id="rightCtlr">
-          <span id="videoSwitch" data-action="disable" class="video on" ></span>
+          <span id="videoSwitch" data-action="disable" class="video off" ></span>
         </a>
       </li>
 
