--- a/templates/precheck.hbs
+++ b/templates/precheck.hbs
@@ -81,7 +81,7 @@
 
                 <div id="joinSession" class="button clearfix">
                   <button type="button" class="prev btn btn-default">{{getString 'Prev'}}</button>
-                  <button type="button" class="next btn btn-default">{{getString 'JoinSession'}}</button>
+                  <button type="button" class="next btn btn-default joinButton">{{getString 'JoinSession'}}</button>
                 </div>
               </div>
             </div>
