--- a/css/bootstrap/css/bootstrap-theme.css
+++ b/css/bootstrap/css/bootstrap-theme.css
@@ -2,6 +2,7 @@
  * Bootstrap v3.3.7 (http://getbootstrap.com)
  * Copyright 2011-2016 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
+ * Commit 2 from master
  */
 .btn-default,
 .btn-primary,
